Added files from Redux tutorial

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,8 @@
         <title>Open Home UI</title>
         <meta name="description" content="Open Home UI">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="css/semantic.min.css"></link>
+        <!-- <link rel="stylesheet" href="css/semantic.min.css"></link> -->
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     </head>
     <body>
         <!--[if lte IE 9]>
