Updated old naming references

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Open Home UI</title>
-        <meta name="description" content="Open Home UI">
+        <title>Open IoT UI</title>
+        <meta name="description" content="Open IoT UI">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- <link rel="stylesheet" href="css/semantic.min.css"></link> -->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
